// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifSearchApp Debe mostrar na lista de categorias 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Ranma 1/2"
      key="Ranma 1/2"
    />
  </ul>
</Fragment>
`;

exports[`Pruebas en GifSearchApp Debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    Gif Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ul />
</Fragment>
`;
